[tool.poetry]
name = "telegram-bot"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
pyrogram = "2.0.106"
tgcrypto = "1.2.5"
Flask = "3.1.3"
nest_asyncio = "1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"